--- a/project-balloons/styles/style.css
+++ b/project-balloons/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #777777;
   font-size: 16px;
@@ -22,7 +22,8 @@ body {
   position: relative;
   height: 95vh;
   background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(1, 1, 1, 0.7) 99.94%), url(../img/header-bbackground.jpg) center/cover no-repeat;
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
 }
 .header__logo {
   position: absolute;
@@ -56,6 +57,7 @@ body {
   animation-duration: 2s;
   animation-delay: 0.5s;
   animation-timing-function: ease-in-out;
+  backface-visibility: hidden;
 }
 .title-first__secondary {
   display: block;
@@ -67,6 +69,27 @@ body {
   animation-duration: 2s;
   animation-delay: 0.5s;
   animation-timing-function: ease-in-out;
+  backface-visibility: hidden;
+  margin-bottom: 65px;
+}
+
+.btn:link, .btn:visited {
+  border-radius: 50px;
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #777777;
+  padding: 15px 40px;
+  background: white;
+  transition: all 0.25s;
+}
+.btn:link:hover, .btn:visited:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+}
+.btn:link:active, .btn:visited:active {
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 @keyframes leftToRight {
