--- a/project-balloons/styles/style.css
+++ b/project-balloons/styles/style.css
@@ -74,6 +74,7 @@ body {
 }
 
 .btn:link, .btn:visited {
+  position: relative;
   border-radius: 50px;
   display: inline-block;
   text-transform: uppercase;
@@ -82,14 +83,29 @@ body {
   padding: 15px 40px;
   background: white;
   transition: all 0.25s;
+  transform: translateY(-2px);
+  transform-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 .btn:link:hover, .btn:visited:hover {
   transform: translateY(-3px);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
-.btn:link:active, .btn:visited:active {
-  transform: translateY(-2px);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+.btn:link:hover::after, .btn:visited:hover::after {
+  transform: scaleX(1.45) scaleY(1.9);
+  opacity: 0;
+}
+.btn::after {
+  content: "";
+  background: white;
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.3s;
 }
 
 @keyframes leftToRight {
