--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -81,7 +81,7 @@ body
                 transform: scaleX(1.45) scaleY(1.9)             // добавляет анимацию псевдоэлементу при ховере
                 opacity: 0
         &:active
-        transform: translateY(-2px)                             // добваляет подъём при наажатии
+            transform: translateY(-2px)                             // добваляет подъём при наажатии
             box-shadow: (0px 4px 4px rgba(0, 0, 0, .1))
     &::after                                                    // псевдоэлемент для анимации взрыва кнопки
             content: ""
@@ -95,6 +95,19 @@ body
             left: 0
             z-index: -1
             transition: all .3s                                 // длитеьлность анимации взрыва кнопки
+    &_animated
+        animation: BtnToUp 1s ease-in-out .5s
+        animation-fill-mode: backwards            // элемент сохраняет стильь первого ключевго кдра на время animation-delay
+ 
+
+@keyframes BtnToUp
+    0%                                          // настройка анимации
+        opacity: 0
+        transform: translateY(50px)
+
+    100%
+        opacity: 1
+        transform: translateY(0px)
 
 @keyframes leftToRight
     0%                                          // настройка анимации
