--- a/project-balloons/styles/style.css
+++ b/project-balloons/styles/style.css
@@ -83,8 +83,6 @@ body {
   padding: 15px 40px;
   background: white;
   transition: all 0.25s;
-  transform: translateY(-2px);
-  transform-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 .btn:link:hover, .btn:visited:hover {
   transform: translateY(-3px);
@@ -93,6 +91,10 @@ body {
 .btn:link:hover::after, .btn:visited:hover::after {
   transform: scaleX(1.45) scaleY(1.9);
   opacity: 0;
+}
+.btn:link:active, .btn:visited:active {
+  transform: translateY(-2px);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 .btn::after {
   content: "";
@@ -107,7 +109,21 @@ body {
   z-index: -1;
   transition: all 0.3s;
 }
+.btn_animated {
+  animation: BtnToUp 1s ease-in-out 0.5s;
+  animation-fill-mode: backwards;
+}
 
+@keyframes BtnToUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 @keyframes leftToRight {
   0% {
     opacity: 0;
