--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -1,16 +1,19 @@
 
-*
+*, ::after, ::before
     margin: 0
     padding: 0
     box-sizing: border-box
+
+html
+    font-size: 62.5%                    // === 10px (62.5% от шрифта по умолчаанию в 16px)
 
 body
     font-family: 'Roboto', sans-serif
     font-weight: 400
     color: #777777
-    font-size: 16px
-    letter-spacing: 2px
-    padding: 50px
+    font-size: 1.6rem
+    letter-spacing: .2rem
+    padding: 5rem
     background-color: #fff
 
 .container
@@ -23,10 +26,10 @@ body
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%) // делает вырезанный уголок на бэкграунде
     &__logo
         position: absolute
-        left: 50px
-        top: 50px
-        height: 70px
-        width: 56px
+        left: 5rem
+        top: 5rem
+        height: 7rem    
+        width: 5.6rem       
     &__box
         position: absolute
         top: 40%
@@ -40,12 +43,12 @@ body
     &__main
         display: block
         color: #FFF
-        font-size: 50px
+        font-size: 5rem
         font-weight: 800
-        line-height: 60px
-        letter-spacing: 10px
+        line-height: 6rem
+        letter-spacing: 1rem    
         text-transform: uppercase
-        margin-bottom: 10px
+        margin-bottom: 1rem
         animation-name: leftToRight // применение анимации
         animation-duration: 2s // длительность анимации
         animation-delay: .5s // задержка анимации
@@ -53,68 +56,68 @@ body
         backface-visibility: hidden // не даёт сайд эффектов анимацииям, типа задней стороны фигуры
     &__secondary
         display: block
-        font-size: 40px
+        font-size: 4rem
         font-weight: 100
         line-height: normal
-        letter-spacing: 5px
+        letter-spacing: .5rem
         animation-name: rightToLeft // применение анимации
         animation-duration: 2s // длительность анимации
         animation-delay: .5s // задержка анима ции
         animation-timing-function: ease-in-out
         backface-visibility: hidden // не даёт сайд эффектов анимацииям, типа задней стороны фигуры
-        margin-bottom: 65px
+        margin-bottom: 6.5rem
 .btn
     &:link, &:visited
         position: relative
-        border-radius: 50px
+        border-radius: 5rem
         display: inline-block
         text-transform: uppercase
         text-decoration: none
         color: #777777
-        padding: 15px 40px
+        padding: 1.5rem 4rem
         background: white
-        transition: all .25s                                    // ддлительность анимаций при ховере и нажатии
+        transition: all .25s // ддлительность анимаций при ховере и нажатии
+        font-size: 2rem
         &:hover
-            transform: translateY(-3px)                         // добваляет подъём при ховере
+            transform: translateY(-3px) // добваляет подъём при ховере
             box-shadow: (0px 4px 4px rgba(0, 0, 0, .3))
             &::after
-                transform: scaleX(1.45) scaleY(1.9)             // добавляет анимацию псевдоэлементу при ховере
+                transform: scaleX(1.45) scaleY(1.9) // добавляет анимацию псевдоэлементу при ховере
                 opacity: 0
         &:active
-            transform: translateY(-2px)                             // добваляет подъём при наажатии
+            transform: translateY(-2px) // добваляет подъём при наажатии
             box-shadow: (0px 4px 4px rgba(0, 0, 0, .1))
     &::after                                                    // псевдоэлемент для анимации взрыва кнопки
-            content: ""
-            background: white
-            width: 100%
-            height: 100%
-            border-radius: 50px
-            display: inline-block
-            position: absolute
-            top: 0
-            left: 0
-            z-index: -1
-            transition: all .3s                                 // длитеьлность анимации взрыва кнопки
+        content: ""
+        background: white
+        width: 100%
+        height: 100%
+        border-radius: 5rem
+        display: inline-block
+        position: absolute
+        top: 0
+        left: 0
+        z-index: -1
+        transition: all .3s // длитеьлность анимации взрыва кнопки
     &_animated
-        animation: BtnToUp 1s ease-in-out .5s
-        animation-fill-mode: backwards            // элемент сохраняет стильь первого ключевго кдра на время animation-delay
- 
+        animation: BtnToUp 1s ease-in-out .5s  // название фрейма / продолжительность / функцию времени / делэй
+        animation-fill-mode: backwards // элемент сохраняет стильь первого ключевго кдра на время animation-delay
 
 @keyframes BtnToUp
     0%                                          // настройка анимации
         opacity: 0
-        transform: translateY(50px)
+        transform: translateY(5rem)
 
     100%
         opacity: 1
-        transform: translateY(0px)
+        transform: translateY(0rem)
 
 @keyframes leftToRight
     0%                                          // настройка анимации
         opacity: 0
-        transform: translateX(-100px)
+        transform: translateX(-10rem)
     50%
-        transform: translateX(20px)
+        transform: translateX(2rem)
     100%
         opacity: 1
         transform: translateX(0px)
@@ -122,9 +125,9 @@ body
 @keyframes rightToLeft
     0%                                          // настройка анимации
         opacity: 0
-        transform: translateX(100px)
+        transform: translateX(10rem)
     50%
-        transform: translateX(-20px)
+        transform: translateX(-2rem)
     100%
         opacity: 1
         transform: translateX(0px)
