--- a/project-balloons/styles/style.css
+++ b/project-balloons/styles/style.css
@@ -1,16 +1,20 @@
-* {
+*, ::after, ::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #777777;
-  font-size: 16px;
-  letter-spacing: 2px;
-  padding: 50px;
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  padding: 5rem;
   background-color: #fff;
 }
 
@@ -27,10 +31,10 @@ body {
 }
 .header__logo {
   position: absolute;
-  left: 50px;
-  top: 50px;
-  height: 70px;
-  width: 56px;
+  left: 5rem;
+  top: 5rem;
+  height: 7rem;
+  width: 5.6rem;
 }
 .header__box {
   position: absolute;
@@ -47,12 +51,12 @@ body {
 .title-first__main {
   display: block;
   color: #FFF;
-  font-size: 50px;
+  font-size: 5rem;
   font-weight: 800;
-  line-height: 60px;
-  letter-spacing: 10px;
+  line-height: 6rem;
+  letter-spacing: 1rem;
   text-transform: uppercase;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
   animation-name: leftToRight;
   animation-duration: 2s;
   animation-delay: 0.5s;
@@ -61,28 +65,29 @@ body {
 }
 .title-first__secondary {
   display: block;
-  font-size: 40px;
+  font-size: 4rem;
   font-weight: 100;
   line-height: normal;
-  letter-spacing: 5px;
+  letter-spacing: 0.5rem;
   animation-name: rightToLeft;
   animation-duration: 2s;
   animation-delay: 0.5s;
   animation-timing-function: ease-in-out;
   backface-visibility: hidden;
-  margin-bottom: 65px;
+  margin-bottom: 6.5rem;
 }
 
 .btn:link, .btn:visited {
   position: relative;
-  border-radius: 50px;
+  border-radius: 5rem;
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
   color: #777777;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   background: white;
   transition: all 0.25s;
+  font-size: 2rem;
 }
 .btn:link:hover, .btn:visited:hover {
   transform: translateY(-3px);
@@ -101,7 +106,7 @@ body {
   background: white;
   width: 100%;
   height: 100%;
-  border-radius: 50px;
+  border-radius: 5rem;
   display: inline-block;
   position: absolute;
   top: 0;
@@ -117,20 +122,20 @@ body {
 @keyframes BtnToUp {
   0% {
     opacity: 0;
-    transform: translateY(50px);
+    transform: translateY(5rem);
   }
   100% {
     opacity: 1;
-    transform: translateY(0px);
+    transform: translateY(0rem);
   }
 }
 @keyframes leftToRight {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
   50% {
-    transform: translateX(20px);
+    transform: translateX(2rem);
   }
   100% {
     opacity: 1;
@@ -140,10 +145,10 @@ body {
 @keyframes rightToLeft {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
   50% {
-    transform: translateX(-20px);
+    transform: translateX(-2rem);
   }
   100% {
     opacity: 1;
