--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -1,3 +1,12 @@
+$color-gray: #777777
+$color-gray-light: #F7F7F7
+$color-brown-light: #BA8554
+$color-brown-dark: #A14F03
+$color-black: #000000
+$color-white: #ffffff
+
+$box-shadow: (0px 4px 4px rgba($color-black, .3))
+$box-shadow-active: (0px 4px 4px rgba($color-black, .1))
 
 *, ::after, ::before
     margin: 0
@@ -10,26 +19,26 @@ html
 body
     font-family: 'Roboto', sans-serif
     font-weight: 400
-    color: #777777
+    color: $color-gray
     font-size: 1.6rem
     letter-spacing: .2rem
     padding: 5rem
-    background-color: #fff
+    background-color: $color-white
 
 .container
-    background-color: #F7F7F7
+    background-color: $color-gray-light
 
 .header
     position: relative
     height: 95vh
-    background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(1, 1, 1, 0.7) 99.94%), url(../img/header-bbackground.jpg) center / cover no-repeat
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url(../img/header-bbackground.jpg) center / cover no-repeat
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%) // делает вырезанный уголок на бэкграунде
     &__logo
         position: absolute
         left: 5rem
         top: 5rem
-        height: 7rem    
-        width: 5.6rem       
+        height: 7rem
+        width: 5.6rem
     &__box
         position: absolute
         top: 40%
@@ -38,15 +47,15 @@ body
         width: 100%
         text-align: center
 .title-first
-    color: #FFF
+    color: $color-white
 
     &__main
         display: block
-        color: #FFF
+        color: $color-white
         font-size: 5rem
         font-weight: 800
         line-height: 6rem
-        letter-spacing: 1rem    
+        letter-spacing: 1rem
         text-transform: uppercase
         margin-bottom: 1rem
         animation-name: leftToRight // применение анимации
@@ -73,20 +82,20 @@ body
         display: inline-block
         text-transform: uppercase
         text-decoration: none
-        color: #777777
+        color: $color-gray
         padding: 1.5rem 4rem
         background: white
         transition: all .25s // ддлительность анимаций при ховере и нажатии
         font-size: 2rem
         &:hover
             transform: translateY(-3px) // добваляет подъём при ховере
-            box-shadow: (0px 4px 4px rgba(0, 0, 0, .3))
+            box-shadow: $box-shadow
             &::after
                 transform: scaleX(1.45) scaleY(1.9) // добавляет анимацию псевдоэлементу при ховере
                 opacity: 0
         &:active
             transform: translateY(-2px) // добваляет подъём при наажатии
-            box-shadow: (0px 4px 4px rgba(0, 0, 0, .1))
+            box-shadow: $box-shadow-active
     &::after                                                    // псевдоэлемент для анимации взрыва кнопки
         content: ""
         background: white
