--- a/project-balloons/css/style.css
+++ b/project-balloons/css/style.css
@@ -15,7 +15,7 @@ body {
   font-size: 1.6rem;
   letter-spacing: 0.2rem;
   padding: 5rem;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .container {
@@ -25,7 +25,7 @@ body {
 .header {
   position: relative;
   height: 95vh;
-  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(1, 1, 1, 0.7) 99.94%), url(../img/header-bbackground.jpg) center/cover no-repeat;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url(../img/header-bbackground.jpg) center/cover no-repeat;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
 }
@@ -46,11 +46,11 @@ body {
 }
 
 .title-first {
-  color: #FFF;
+  color: #ffffff;
 }
 .title-first__main {
   display: block;
-  color: #FFF;
+  color: #ffffff;
   font-size: 5rem;
   font-weight: 800;
   line-height: 6rem;
@@ -78,12 +78,12 @@ body {
 }
 
 .btn:link, .btn:visited {
-  position: relative;
-  border-radius: 5rem;
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
   color: #777777;
+  position: relative;
+  border-radius: 5rem;
   padding: 1.5rem 4rem;
   background: white;
   transition: all 0.25s;
