--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -1,146 +1,31 @@
-$color-gray: #777777
-$color-gray-light: #F7F7F7
-$color-brown-light: #BA8554
-$color-brown-dark: #A14F03
-$color-black: #000000
-$color-white: #ffffff
+@import "abstract/variables"  
+@import "abstract/mixins"
+@import "abstract/functions"
+// минксины, функции и компоненты должны быть сверху т.к могут не сработать
 
-$box-shadow: (0px 4px 4px rgba($color-black, .3))
-$box-shadow-active: (0px 4px 4px rgba($color-black, .1))
+@import "base/animation"
+@import "base/base"
+@import "base/typography"
+@import "base/utilities"
 
-@mixin style-link($color)
-    display: inline-block
-    text-transform: uppercase
-    text-decoration: none
-    color: $color
+
+@import "components/button"
+
+@import "layout/header"
+
+@import "pages/home"
     
 
-*, ::after, ::before
-    margin: 0
-    padding: 0
-    box-sizing: border-box
 
-html
-    font-size: 62.5%                    // === 10px (62.5% от шрифта по умолчаанию в 16px)
 
-body
-    font-family: 'Roboto', sans-serif
-    font-weight: 400
-    color: $color-gray
-    font-size: 1.6rem
-    letter-spacing: .2rem
-    padding: 5rem
-    background-color: $color-white
+    
 
-.container
-    background-color: $color-gray-light
 
-.header
-    position: relative
-    height: 95vh
-    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url(../img/header-bbackground.jpg) center / cover no-repeat
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%) // делает вырезанный уголок на бэкграунде
-    &__logo
-        position: absolute
-        left: 5rem
-        top: 5rem
-        height: 7rem
-        width: 5.6rem
-    &__box
-        position: absolute
-        top: 40%
-        left: 50%
-        transform: translate(-50%, -50%) // делает смещение для абсолютного позиционирования по центру элемента
-        width: 100%
-        text-align: center
-.title-first
-    color: $color-white
 
-    &__main
-        display: block
-        color: $color-white
-        font-size: 5rem
-        font-weight: 800
-        line-height: 6rem
-        letter-spacing: 1rem
-        text-transform: uppercase
-        margin-bottom: 1rem
-        animation-name: leftToRight // применение анимации
-        animation-duration: 2s // длительность анимации
-        animation-delay: .5s // задержка анимации
-        animation-timing-function: ease-in-out
-        backface-visibility: hidden // не даёт сайд эффектов анимацииям, типа задней стороны фигуры
-    &__secondary
-        display: block
-        font-size: 4rem
-        font-weight: 100
-        line-height: normal
-        letter-spacing: .5rem
-        animation-name: rightToLeft // применение анимации
-        animation-duration: 2s // длительность анимации
-        animation-delay: .5s // задержка анима ции
-        animation-timing-function: ease-in-out
-        backface-visibility: hidden // не даёт сайд эффектов анимацииям, типа задней стороны фигуры
-        margin-bottom: 6.5rem
-.btn
-    &:link, &:visited
-        @include style-link($color-gray)
-        position: relative
-        border-radius: 5rem
-        padding: 1.5rem 4rem
-        background: white
-        transition: all .25s // ддлительность анимаций при ховере и нажатии
-        font-size: 2rem
-        &:hover
-            transform: translateY(-3px) // добваляет подъём при ховере
-            box-shadow: $box-shadow
-            &::after
-                transform: scaleX(1.45) scaleY(1.9) // добавляет анимацию псевдоэлементу при ховере
-                opacity: 0
-        &:active
-            transform: translateY(-2px) // добваляет подъём при наажатии
-            box-shadow: $box-shadow-active
-    &::after                                                    // псевдоэлемент для анимации взрыва кнопки
-        content: ""
-        background: white
-        width: 100%
-        height: 100%
-        border-radius: 5rem
-        display: inline-block
-        position: absolute
-        top: 0
-        left: 0
-        z-index: -1
-        transition: all .3s // длитеьлность анимации взрыва кнопки
-    &_animated
-        animation: BtnToUp 1s ease-in-out .5s  // название фрейма / продолжительность / функцию времени / делэй
-        animation-fill-mode: backwards // элемент сохраняет стильь первого ключевго кдра на время animation-delay
 
-@keyframes BtnToUp
-    0%                                          // настройка анимации
-        opacity: 0
-        transform: translateY(5rem)
 
-    100%
-        opacity: 1
-        transform: translateY(0rem)
 
-@keyframes leftToRight
-    0%                                          // настройка анимации
-        opacity: 0
-        transform: translateX(-10rem)
-    50%
-        transform: translateX(2rem)
-    100%
-        opacity: 1
-        transform: translateX(0px)
 
-@keyframes rightToLeft
-    0%                                          // настройка анимации
-        opacity: 0
-        transform: translateX(10rem)
-    50%
-        transform: translateX(-2rem)
-    100%
-        opacity: 1
-        transform: translateX(0px)
+
+
+
