--- a/project-balloons/SASS/abstract/_mixins.sass
+++ b/project-balloons/SASS/abstract/_mixins.sass
@@ -5,3 +5,10 @@
     text-decoration: none
     color: $color
     
+
+@mixin clearfix
+    &::after
+        content: ""
+        display: table
+        clear: both
+        
