--- a/project-balloons/SASS/abstract/_variables.sass
+++ b/project-balloons/SASS/abstract/_variables.sass
@@ -7,3 +7,7 @@ $color-white: #ffffff
 
 $box-shadow: (0px 4px 4px rgba($color-black, .3))
 $box-shadow-active: (0px 4px 4px rgba($color-black, .1))
+
+$margin-vertical-big: 8rem
+$grid-width: 114rem
+$gutter-horizontal: 6rem
