--- a/project-balloons/SASS/abstract/_variables.sass
+++ b/project-balloons/SASS/abstract/_variables.sass
@@ -7,6 +7,7 @@ $color-white: #ffffff
 
 $box-shadow: (0px 4px 4px rgba($color-black, .3))
 $box-shadow-active: (0px 4px 4px rgba($color-black, .1))
+$shadow-h2: 0rem .4rem .4rem rgba($color-black,  .25)
 
 $margin-vertical-big: 8rem
 $grid-width: 114rem
