--- a/project-balloons/SASS/abstract/_variables.sass
+++ b/project-balloons/SASS/abstract/_variables.sass
@@ -12,3 +12,7 @@ $shadow-h2: 0rem .4rem .4rem rgba($color-black,  .25)
 $margin-vertical-big: 8rem
 $grid-width: 114rem
 $gutter-horizontal: 6rem
+
+$font-size-paraagraph: 1.6rem
+$font-size-h2: 3.6rem
+$font-size-h3: 2rem
