--- a/project-balloons/css/style.css
+++ b/project-balloons/css/style.css
@@ -110,8 +110,33 @@ body {
   text-shadow: 0rem 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
 }
 
+.title-third {
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  font-weight: 700;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  line-height: 140%;
+  font-weight: 400;
+}
+
 .text-align-center {
   text-align: center;
+}
+
+.margin-bottom-10px {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-30px {
+  margin-bottom: 3rem;
+}
+
+.margin-bottom-50px {
+  margin-bottom: 5rem;
 }
 
 .margin-bottom-80px {
@@ -160,6 +185,27 @@ body {
   animation-fill-mode: backwards;
 }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  font-weight: 700;
+  color: #BA8554;
+  text-decoration: none;
+  padding: 1rem;
+  border-bottom: 1px #A14F03 solid;
+  display: inline-block;
+  transition: 0.2s all;
+}
+.btn-text:link:hover, .btn-text:visited:hover {
+  background-color: #BA8554;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+  transform: translateY(-0.2rem);
+}
+.btn-text:link:active, .btn-text:visited:active {
+  transform: translateY(0);
+}
+
 .header {
   position: relative;
   height: 95vh;
@@ -185,7 +231,6 @@ body {
 
 .row {
   max-width: 114rem;
-  background: rgba(235, 182, 182, 0.4666666667);
   margin: 0 auto;
 }
 .row:not(:last-child) {
@@ -222,7 +267,6 @@ body {
 }
 
 [class^=col-] {
-  background: rgba(67, 81, 235, 0.4666666667);
   float: left;
 }
 [class^=col-]:not(:last-child) {
