доделана вторая секция с анимированными изображениями

--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -11,6 +11,7 @@
 
 @import "components/button"
 @import "components/_button-text"
+@import "components/_composition"
 
 @import "layout/header"
 @import "layout/grid"
