добавлена 3я секция с карточками

--- a/project-balloons/SASS/pages/_home.sass
+++ b/project-balloons/SASS/pages/_home.sass
@@ -1,2 +1,13 @@
 .section-about
     padding-top: 8rem
+    padding-bottom: 8rem
+
+.section-adventure
+    padding: 21rem
+    background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url(../img/section-adventure.jpg) center/cover no-repeat
+    clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 90%)
+    // transform: skewY(7deg)
+    // padding-bottom: 8rem
+    // & > *                                      // применение ко всем потомкам
+    //     transform: skewY(-7deg)
+
