--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -12,6 +12,7 @@
 @import "components/button"
 @import "components/_button-text"
 @import "components/_composition"
+@import "components/_adventure-card"
 
 @import "layout/header"
 @import "layout/grid"
