--- a/project-balloons/css/style.css
+++ b/project-balloons/css/style.css
@@ -239,6 +239,21 @@ body {
   transform: scale(0.9);
 }
 
+.adventure-card {
+  padding: 2.5rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 0.5rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  transition: 0.2s all;
+}
+.adventure-card:hover {
+  transform: translateY(-1.5rem) scale(1.1);
+}
+.adventure-card__icon {
+  width: 6.3rem;
+}
+
 .header {
   position: relative;
   height: 95vh;
@@ -308,4 +323,12 @@ body {
 
 .section-about {
   padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.section-adventure {
+  padding: 21rem;
+  background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url(../img/section-adventure.jpg) center/cover no-repeat;
+  -webkit-clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 90%);
+          clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 90%);
 }/*# sourceMappingURL=style.css.map */
