добавлена заготовка переворачивабщейся при ховере карточки в блоке с турами

--- a/project-balloons/SASS/base/_utilities.sass
+++ b/project-balloons/SASS/base/_utilities.sass
@@ -14,3 +14,8 @@
 .margin-bottom-80px
     margin-bottom: 8rem
 
+.margin-top-80px
+    margin-top: 8rem
+
+.padding-top-80px
+    padding-top: 8rem
