--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -13,6 +13,7 @@
 @import "components/_button-text"
 @import "components/_composition"
 @import "components/_adventure-card"
+@import "components/_tour-card"
 
 @import "layout/header"
 @import "layout/grid"
