--- a/project-balloons/css/style.css
+++ b/project-balloons/css/style.css
@@ -143,6 +143,14 @@ body {
   margin-bottom: 8rem;
 }
 
+.margin-top-80px {
+  margin-top: 8rem;
+}
+
+.padding-top-80px {
+  padding-top: 8rem;
+}
+
 .btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
@@ -254,6 +262,37 @@ body {
   width: 6.3rem;
 }
 
+.card-tour {
+  position: relative;
+  height: 50rem;
+  perspective: 250rem;
+  -moz-perspective: 150rem;
+}
+.card-tour__side {
+  height: 50rem;
+  transition: 0.3s all ease-out;
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  backface-visibility: hidden;
+}
+.card-tour__side_front {
+  background: yellow;
+}
+.card-tour__side_back {
+  background: green;
+  transform: rotateY(180deg);
+  background: linear-gradient(120deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(161, 79, 3, 0.7) 99.94%);
+}
+.card-tour:hover .card-tour__side_front {
+  transform: rotateY(180deg);
+}
+.card-tour:hover .card-tour__side_back {
+  transform: rotateY(0deg);
+}
+
 .header {
   position: relative;
   height: 95vh;
@@ -327,8 +366,15 @@ body {
 }
 
 .section-adventure {
-  padding: 21rem;
+  padding: 21rem 0;
   background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url(../img/section-adventure.jpg) center/cover no-repeat;
-  -webkit-clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 90%);
-          clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 90%);
+  transform: skewY(5deg);
+  padding-bottom: 8rem;
+}
+.section-adventure > * {
+  transform: skewY(-5deg);
+}
+
+.section-tour {
+  padding-top: 21rem 0;
 }/*# sourceMappingURL=style.css.map */
