--- a/project-balloons/SASS/components/_tour-card.sass
+++ b/project-balloons/SASS/components/_tour-card.sass
@@ -7,21 +7,58 @@
     -moz-perspective: 150rem
     &__side
         height: 50rem
-        transition: .3s all ease-out
-        color: white
+        transition: .5s all ease-out
+        color: black
         position: absolute
         top: 0
         left: 0
         width: 100%
         backface-visibility: hidden
+        box-shadow: $box-shadow
         &_front
-            background: yellow
-
+            // background: yellow
         &_back
-            background: green
-            transform: rotateY(180deg)              // по умолчанию добавлен переворот на 180 по игрек оси
-            background: linear-gradient(120deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%),
+            transform: rotateY(180deg) // по умолчанию добавлен переворот на 180 по игрек оси
+            background: linear-gradient(120deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%)
     &:hover &__side_front
-        transform: rotateY(180deg)
+        transform: rotateY(-180deg)
     &:hover &__side_back
         transform: rotateY(0deg)
+    &__img
+        background-blend-mode: hard-light // ддобавляет наложение слоя хард лайт
+        height: 21rem
+        background: $color-brown-light url(../img/tours_card_1.jpg) center/cover no-repeat
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
+    &__title
+        font-size: 2.8rem
+        letter-spacing: .2rem
+        font-weight: 300
+        text-transform: uppercase
+        text-align: right
+        color: $color-white
+        position: absolute
+        top: 17rem
+        right: 0rem
+    &__span
+        background: linear-gradient(90deg, $color-brown-light, $color-brown-dark )
+        padding: 1rem 2rem .3rem 2rem
+        &_1
+        &_2
+            position: absolute
+            top: 3.4rem
+            right: 0
+            padding-bottom: 1rem
+            padding-top: .3rem
+    &__descr
+        ul
+            list-style: none
+            margin: 0 auto
+            width: 80%
+            li
+                font-size: $font-size-paraagraph
+                letter-spacing: .2rem
+                color: $color-gray
+                border-bottom: 1px solid $color-gray
+                text-align: center
+                &:not(:last-child)
+                    margin-bottom: 2rem
