заавершена секция с отзывами ддобавлено обтекание текста вокруг круглого фото и заблюривание при ховере

--- a/project-balloons/SASS/pages/_home.sass
+++ b/project-balloons/SASS/pages/_home.sass
@@ -1,6 +1,7 @@
 .section-about
     padding-top: 8rem
-    padding-bottom: 8rem
+    margin-bottom: 14rem
+    // padding-bottom: 8rem
 
 .section-adventure
     padding: 21rem 0 
@@ -12,4 +13,9 @@
         transform: skewY(-5deg)
 
 .section-tour
-    padding-top: 21rem 0 
+    // padding-top: 21rem 0 
+    margin-bottom: 8rem
+
+.section-feedback
+    padding-top: 8rem
+    padding-bottom: 5rem
