--- a/project-balloons/SASS/base/_typography.sass
+++ b/project-balloons/SASS/base/_typography.sass
@@ -49,6 +49,8 @@ body
     &:hover
         transform: skewY(2deg) skewX(10deg) scale(1.1)
         text-shadow: $shadow-h2
+    &_white
+        color: $color-white
 
 .title-third
     font-size: $font-size-h3
