--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -14,6 +14,7 @@
 @import "components/_composition"
 @import "components/_adventure-card"
 @import "components/_tour-card"
+@import "components/_feedback-card"
 
 @import "layout/header"
 @import "layout/grid"
