полностью заавершена секция с отзывами дообавлено фоновое видео как бэкграунд в секцию с отзывами

--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -15,6 +15,7 @@
 @import "components/_adventure-card"
 @import "components/_tour-card"
 @import "components/_feedback-card"
+@import "components/_bg-video"
 
 @import "layout/header"
 @import "layout/grid"
