добавлены стили для контейнера формы. Добавлены стили с анимациями для инпутов

--- a/project-balloons/SASS/pages/_home.sass
+++ b/project-balloons/SASS/pages/_home.sass
@@ -5,7 +5,7 @@
 
 .section-adventure
     padding: 21rem 0 
-    background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(0, 0, 0, 0.7) 99.94%), url(../img/section-adventure.jpg) center/cover no-repeat
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), url(../img/section-adventure.jpg) center/cover no-repeat
     // clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 90%)
     transform: skewY(5deg)
     padding-bottom: 8rem
@@ -20,3 +20,7 @@
     position: relative
     padding-top: 8rem
     padding-bottom: 5rem
+
+.section-book
+    padding: 10rem
+    background: linear-gradient(90deg, $color-brown-light, $color-black)
