--- a/project-balloons/SASS/style.sass
+++ b/project-balloons/SASS/style.sass
@@ -16,6 +16,7 @@
 @import "components/_tour-card"
 @import "components/_feedback-card"
 @import "components/_bg-video"
+@import "components/_form"
 
 @import "layout/header"
 @import "layout/grid"
