добавлен кастомный радиобаттон с псевдоэлементами

--- a/project-balloons/css/style.css
+++ b/project-balloons/css/style.css
@@ -156,7 +156,7 @@ body {
   padding-top: 8rem;
 }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
@@ -167,16 +167,17 @@ body {
   background: white;
   transition: all 0.25s;
   font-size: 2rem;
+  border: none;
 }
-.btn:link:hover, .btn:visited:hover {
+.btn:hover, .btn:link:hover, .btn:visited:hover {
   transform: translateY(-3px);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
-.btn:link:hover::after, .btn:visited:hover::after {
+.btn:hover::after, .btn:link:hover::after, .btn:visited:hover::after {
   transform: scaleX(1.45) scaleY(1.9);
   opacity: 0;
 }
-.btn:link:active, .btn:visited:active {
+.btn:active, .btn:link:active, .btn:visited:active {
   transform: translateY(-2px);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
@@ -196,6 +197,15 @@ body {
 .btn_animated {
   animation: BtnToUp 1s ease-in-out 0.5s;
   animation-fill-mode: backwards;
+}
+
+.btn_brown, .btn_brown:link, .btn_brown:visited {
+  background: #A14F03;
+  color: #ffffff;
+  cursor: pointer;
+}
+.btn_brown::after, .btn_brown:link::after, .btn_brown:visited::after {
+  background: #A14F03;
 }
 
 .btn-text:link, .btn-text:visited {
@@ -457,7 +467,10 @@ body {
   padding: 5rem;
 }
 .form__group:not(:last-child) {
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
+}
+.form__group:nth-child(4) {
+  margin-bottom: 4rem;
 }
 .form__input {
   font-size: 1.6rem;
@@ -469,7 +482,7 @@ body {
   border: none;
   border-bottom: 0.3rem solid transparent;
   border-radius: 0.5rem;
-  width: 55%;
+  width: 75%;
 }
 .form__input:focus {
   outline: none;
@@ -479,24 +492,63 @@ body {
 .form__input:focus:invalid {
   border-bottom: 0.3rem solid #d76363;
 }
-.form__lable {
+.form__label {
   font-size: 1.6rem;
   letter-spacing: 0.2rem;
   font-weight: 400;
   display: block;
   margin-top: 1rem;
   margin-left: 1.5rem;
-  transition: 0.7s all;
+  transition: 0.2s all;
 }
-.form__input:-moz-placeholder-shown + .form__lable {
+.form__input:-moz-placeholder-shown + .form__label {
   opacity: 0;
   visibility: hidden;
   transform: translateY(-2rem);
 }
-.form__input:placeholder-shown + .form__lable {
+.form__input:placeholder-shown + .form__label {
   opacity: 0;
   visibility: hidden;
   transform: translateY(-2rem);
+}
+.form__group-radio {
+  width: 45%;
+  display: inline-block;
+}
+.form__input-radio {
+  display: none;
+}
+.form__label-radio {
+  cursor: pointer;
+  position: relative;
+  padding-left: 4rem;
+}
+.form__button-radio {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  border: 0.5rem solid #A14F03;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: -0.4rem;
+}
+.form__button-radio::after {
+  content: "";
+  display: block;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  background: #A14F03;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: 0.2s all;
+}
+.form__input-radio:checked ~ .form__label-radio .form__button-radio::after {
+  opacity: 1;
 }
 
 .header {
