--- a/project-balloons/SASS/components/_button.sass
+++ b/project-balloons/SASS/components/_button.sass
@@ -1,7 +1,6 @@
 
-
 .btn
-    &:link, &:visited
+    &, &:link, &:visited                  // 1x& применяет к классу btn т.е чисто к кнопке, у которого нет &:link, &:visited
         @include style-link($color-gray)
         position: relative
         border-radius: 5rem
@@ -9,6 +8,7 @@
         background: white
         transition: all .25s // ддлительность анимаций при ховере и нажатии
         font-size: 2rem
+        border: none
         &:hover
             transform: translateY(-3px) // добваляет подъём при ховере
             box-shadow: $box-shadow
@@ -31,5 +31,14 @@
         z-index: -1
         transition: all .3s // длитеьлность анимации взрыва кнопки
     &_animated
-        animation: BtnToUp 1s ease-in-out .5s  // название фрейма / продолжительность / функцию времени / делэй
+        animation: BtnToUp 1s ease-in-out .5s // название фрейма / продолжительность / функцию времени / делэй
         animation-fill-mode: backwards // элемент сохраняет стильь первого ключевго кдра на время animation-delay
+
+.btn_brown
+    &, &:link, &:visited
+        background: $color-brown-dark
+        color: $color-white
+        cursor: pointer
+        &:hover
+        &::after
+            background: $color-brown-dark
