--- a/project-balloons/SASS/components/_form.sass
+++ b/project-balloons/SASS/components/_form.sass
@@ -11,8 +11,9 @@
     width: 60%
     padding: 5rem
     &__group:not(:last-child)
-        margin-bottom: 5rem
-
+        margin-bottom: 2rem
+    &__group:nth-child(4)         // применяет к 4 чайлду
+        margin-bottom: 4rem
     &__input
         font-size: $font-size-paraagraph
         letter-spacing: .2rem
@@ -23,22 +24,59 @@
         border: none
         border-bottom: .3rem solid transparent
         border-radius: .5rem
-        width: 55%
+        width: 75%
         &:focus
             outline: none
             border-bottom: .3rem solid #66d763
             box-shadow: $box-shadow
         &:focus:invalid
             border-bottom: .3rem solid #d76363
-    &__lable
+    &__label
         font-size: 1.6rem
         letter-spacing: .2rem
         font-weight: 400
         display: block
         margin-top: 1rem
         margin-left: 1.5rem
-        transition: .7s all
-    &__input:placeholder-shown + &__lable           // + позволяет обратиться не к дочернему элементу label, а к соседнему
+        transition: .2s all
+
+    &__input:placeholder-shown + &__label           // + позволяет обратиться не к дочернему элементу label, а к соседнему
         opacity: 0
-        visibility: hidden                          // лэйбл появляется во время исчезновения плэйсхолдера
+        visibility: hidden // лэйбл появляется во время исчезновения плэйсхолдера
         transform: translateY(-2rem)
+
+    &__group-radio
+        width: 45%
+        display: inline-block
+    &__input-radio
+        display: none
+    &__label-radio
+        cursor: pointer
+        position: relative
+        padding-left: 4rem
+    &__button-radio
+        height: 3rem
+        width: 3rem
+        border-radius: 50%
+        border: .5rem solid $color-brown-dark
+        display: block
+        position: absolute
+        left: 0
+        top: -.4rem
+        &::after
+            content: ""
+            display: block
+            height: 1.5rem
+            width: 1.5rem
+            border-radius: 50%
+            background: $color-brown-dark
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            opacity: 0
+            transition: .2s all
+
+    &__input-radio:checked ~ &__label-radio &__button-radio::after // выбирает все братские элементы внутри __label-radio внутри, т.е __button-radio::after
+        opacity: 1
+        
