--- a/project-balloons/SASS/layout/_navigation.sass
+++ b/project-balloons/SASS/layout/_navigation.sass
@@ -4,21 +4,23 @@
         display: none
     &__button
         background: $color-white
-        height: 9rem
-        width: 9rem
+        height: 7rem
+        width: 7rem
         border-radius: 50%
         position: fixed
-        top: 7rem
-        right: 7rem
+        top: 10rem
+        right: 10rem
         z-index: 70
+        text-align: center
+        cursor: pointer
     &__background
-        width: 7rem
-        height: 7rem
+        width: 5rem
+        height: 5rem
         border-radius: 50%
         background: radial-gradient($color-brown-light, $color-brown-dark)
         position: fixed
-        right: 8rem
-        top: 8rem
+        right: 11rem
+        top: 11rem
         z-index: 50
         transition: all .5s
         // transform: scale(80)
@@ -29,7 +31,7 @@
         right: 0
         z-index: 60
         opacity: 0
-        transition: all 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6)
+        transition: all .3s cubic-bezier(0.68, -0.6, 0.32, 1.6)
     &__list
         position: absolute
         top: 50%
@@ -62,3 +64,38 @@
     &__toggle:checked ~ &__nav
         width: 100%
         opacity: 1
+    &__icon
+        position: relative
+        margin-top: 33px
+        &,
+        &::before,
+        &::after
+            width: 30px
+            height: 2px
+            background: $color-black
+            display: inline-block
+            transition: all .2s
+        &::before,
+        &::after
+            content: ""
+            position: absolute
+            left: 0
+        &::before
+            top: -8px
+        &::after
+            top: 8px
+
+    &__button:hover &__icon::before
+        top: -10px
+    &__button:hover &__icon::after
+        top: 10px
+
+    &__toggle:checked + &__button &__icon
+        background: transparent
+        
+    &__toggle:checked + &__button &__icon::before
+        top: 0
+        transform: rotate(135deg)
+    &__toggle:checked + &__button &__icon::after
+        top: 0
+        transform: rotate(-135deg)
