--- a/project-balloons/SASS/layout/_navigation.sass
+++ b/project-balloons/SASS/layout/_navigation.sass
@@ -66,12 +66,12 @@
         opacity: 1
     &__icon
         position: relative
-        margin-top: 33px
+        margin-top: 3.3rem
         &,
         &::before,
         &::after
-            width: 30px
-            height: 2px
+            width: 3rem
+            height: .2rem
             background: $color-black
             display: inline-block
             transition: all .2s
@@ -81,14 +81,14 @@
             position: absolute
             left: 0
         &::before
-            top: -8px
+            top: -.8rem
         &::after
-            top: 8px
+            top: .8rem
 
     &__button:hover &__icon::before
-        top: -10px
+        top: -1rem
     &__button:hover &__icon::after
-        top: 10px
+        top: 1rem
 
     &__toggle:checked + &__button &__icon
         background: transparent
