--- a/project-balloons/SASS/layout/_header.sass
+++ b/project-balloons/SASS/layout/_header.sass
@@ -16,3 +16,5 @@
         transform: translate(-50%, -50%) // делает смещение для абсолютного позиционирования по центру элемента
         width: 100%
         text-align: center
+        @include respond(tab-land)
+            top: 50%
