--- a/project-balloons/SASS/components/_tour-card.sass
+++ b/project-balloons/SASS/components/_tour-card.sass
@@ -12,7 +12,7 @@
         top: 0
         left: 0
         width: 100%
-        backface-visibility: hidden       // делает невидммым заднюю сторону карточки
+        backface-visibility: hidden // делает невидммым заднюю сторону карточки
         box-shadow: $box-shadow
         border-radius: 3px
         overflow: hidden
@@ -71,6 +71,8 @@
                 display: inline-block
                 &:not(:last-child)
                     margin-bottom: 2rem
+                @include respond(tab-land)
+                    font-size: 1.5rem
 
     &__backSide-box
         position: absolute
@@ -82,11 +84,11 @@
         margin-bottom: 8rem
         letter-spacing: .2rem
         text-transform: uppercase
-        text-align: center 
+        text-align: center
         &_1
             font-size: $font-size-paraagraph
             font-weight: 300
-            
+
         &_2
-           font-size: 6rem
-           font-weight: 500 
+            font-size: 6rem
+            font-weight: 500
